shrunk some of the comments

--- a/doc/presentation/introduction.tex
+++ b/doc/presentation/introduction.tex
@@ -88,6 +88,7 @@
     \item $u(t)$ is the input
     \item States
     \begin{itemize}
+    \tiny
     \item s - Neural Response (Flow Inducing Signal)
     \item f - Inflow of Oxygenated Blood
     \item v - Local Blood Volume
@@ -95,6 +96,7 @@
     \end{itemize}
     \item Parameters
     \begin{itemize}
+    \tiny
     \item $\epsilon$ - efficiency
     \item $\tau_s$ - Falloff time for Flow Inducing Signal
     \item $\tau_f$ - Onset time for Flow Inducing Signal
@@ -105,8 +107,7 @@
     \end{itemize}
     \item $a_1$,$a_2$ are functions of the imaging modality,
             and to a vary somewhat with $E_0$. 
-    \item $a_1 = k_1*E_0 + k_2*E_0$
-    \item $a_2 = k_2*E_0 + k_3$
+    \item $a_1 = k_1*E_0 + k_2*E_0$, $a_2 = k_2*E_0 + k_3$
     \end{itemize}
   }
 \end{frame}
