--- a/doc/presentation/methods.tex
+++ b/doc/presentation/methods.tex
@@ -53,6 +53,7 @@ Resting State Noise Steps
 \includegraphics[trim=3cm 0cm 3cm 0cm,width=.75\textwidth]{noise2_0009d_22_38_23}
 
 \note{
+\tiny
 \begin{itemize}
 \item Previous Works have investigated the noise extensively
 \item Drift characteristic, occurs in cadavers, and after registration
