--- a/doc/presentation/nonlinear.tex
+++ b/doc/presentation/nonlinear.tex
@@ -69,6 +69,7 @@
     \begin{itemize}
      \item Riera: Local Linearize
         \begin{itemize}
+            \tiny
             \item Compare Estimated Step (Adjacent Measurements) With Actual Step
             \item Jacobian is available - gradient descent possible
             \item Removes Drift/Structured Noise
@@ -209,7 +210,7 @@
 \end{column}
 \end{columns}
 \note{
-    \small
+    \tiny
 \begin{itemize}
     \item Weighting function decides how much you want to weight particles
             that don't exactly match the measurement
@@ -487,7 +488,7 @@
 \end{column}
 \end{columns}
 \note{
-    \small
+    \tiny
     \begin{itemize}
         \item The posterior distribution is represented by a mixture
                 PDF, where the probability of a discrete point is based
