updated realhist, added a full heatmap

--- a/doc/presentation/results.tex
+++ b/doc/presentation/results.tex
@@ -229,7 +229,7 @@ $\tau_0$ & $\alpha$ & $E_0$    & $V_0$    & $\tau_s$ & $\tau_f$ & $\epsilon$  & 
 \begin{frame}{Particle Filter Results: Histogram}
 \begin{figure}
 \centering
-\includegraphics[width=.95\textwidth]{realhistm}
+\includegraphics[width=.95\textwidth]{realhist}
 \end{figure}
 \note{
 \begin{itemize}
